Main-Stuff/Content/Ingress/ingress-nginx-page/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
