Main-Stuff/Content/Ingress/ingress-nginx-page/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod2
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80


apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:
    app: service1-app
spec:
  containers:
    - name: service1-container
      image: nginx:latest
      ports:
        - containerPort: 80
