Main-Stuff/Content/Ingress/ingress-nginx-page/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
