Main-Stuff/Content/Ingress/ingress-nginx-page/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /pod1
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 80
          - path: /pod2
            pathType: Prefix
            backend:
              service:
                name: service2
                port:
                  number: 80
