Main-Stuff/Content/Ingress/ingress-nginx-page/main-file.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  namespace: ingress-nginx
  labels:
    app: service1-app
spec:
  containers:
    - name: service1-container
      image: nginx:latest
      ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: ingress-nginx
spec:
  selector:
    app: service1-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: pod2
  namespace: ingress-nginx
  labels:
    app: service2-app
spec:
  containers:
    - name: service2-container
      image: nginx:latest
      ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: service2
  namespace: ingress-nginx
spec:
  selector:
    app: service2-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /pod1
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 80
          - path: /pod2
            pathType: Prefix
            backend:
              service:
                name: service2
                port:
                  number: 80
